name:                Hablog
version:             0.1.0.0
synopsis:            A simple blog engine.
license:             MIT
license-file:        LICENSE
author:              Garrett Pauls
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable hablog
  main-is:             Main-Server.hs
  hs-source-dirs:      src
  build-depends:       base ==4.5.*

