name:                Hablog
version:             0.1.0.0
synopsis:            A simple blog engine.
license:             MIT
license-file:        LICENSE
author:              Garrett Pauls
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable hablog
  main-is:             Main-Server.hs
  hs-source-dirs:      src
  ghc-options:         -Wall
  build-depends:       base ==4.5.*
                     , base64-bytestring
                     , bcrypt
                     , blaze-html
                     , boomerang
                     , bytestring
                     , conduit
                     , directory
                     , happstack-server
                     , monad-control
                     , monad-logger
                     , mtl
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , reform
                     , reform-blaze
                     , reform-happstack
                     , resourcet
                     , text
                     , time
                     , transformers
                     , web-routes
                     , web-routes-boomerang
                     , web-routes-th
                     , web-routes-happstack
                     , yaml

